Adjust config to allow CORS + new video structure

--- a/nginx-1.29.4/conf/nginx.conf
+++ b/nginx-1.29.4/conf/nginx.conf
@@ -38,6 +38,17 @@ http {
 
         #access_log  logs/host.access.log  main;
 
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods GET,HEAD,OPTIONS;
+        add_header Access-Control-Allow-Headers Range;
+        add_header Accept-Ranges bytes;
+
+        types {
+            application/dash+xml mpd;
+            video/mp4 mp4 m4s;
+            audio/mp4 m4a;
+        }
+
         location / {
             root   html;
             index  index.html index.htm;
@@ -47,6 +58,7 @@ http {
         # default: provide list in HTML format
         # SOURCE: https://nginx.org/en/docs/http/ngx_http_autoindex_module.html
         location /videos/ {
+            alias html/videos/;
             autoindex on;
         }
 
