--- a/nginx-1.29.4/conf/nginx.conf
+++ b/nginx-1.29.4/conf/nginx.conf
@@ -1,4 +1,3 @@
-
 #user  nobody;
 worker_processes  1;
 
@@ -15,8 +14,8 @@ events {
 
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    include       mime.types;              # keep default types like text/html, text/css
+    default_type  application/octet-stream;  # fallback for unknown types
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -43,15 +42,19 @@ http {
         add_header Access-Control-Allow-Headers Range;
         add_header Accept-Ranges bytes;
 
+        # custom types for DASH
         types {
-            application/dash+xml mpd;
-            video/mp4 mp4 m4s;
-            audio/mp4 m4a;
+            application/dash+xml mpd;        # DASH manifest
+            video/mp4 mp4 m4s;               # video segments
+            audio/mp4 m4a;                   # audio segments
+            # other types come from mime.types include
         }
 
         location / {
             root   html;
             index  index.html index.htm;
+            default_type text/html;           # ensures HTML is rendered
+            try_files $uri $uri/ =404;       # fallback to 404 if file not found
         }
 
         # enable directory listing (--> list all available videos)
@@ -62,7 +65,6 @@ http {
             autoindex on;
         }
 
-
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
@@ -70,6 +72,7 @@ http {
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
+            default_type text/html;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:8123
